--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "models",
+  "name": "@laboratoria/models",
   "version": "1.0.0-alpha.19",
   "license": "MIT",
   "repository": "Laboratoria/models",
